# global_vibez_dsg1

./: .env.example  .gitignore  AAA_GAME_UPGRADE_MASTER_PLAN.md  ADMIN_ACCESS_GUIDE.md  AI_TECHNOLOGY_REPORT.md  APP_TOUR_SLIDESHOW.md  ARCADE_COMPLETION_SUMMARY.md  BACK_BUTTONS_ADDED.md  BID_WHIST_ALL_CODE.txt  BUSINESS_SETUP_GUIDE.md  CHAT_SYSTEM_IMPLEMENTATION.md  CHECKERS_TOWER_STACKING_IMPLEMENTATION.md  CODE_COMPLEXITY_ANALYSIS.md  CODE_QUALITY_AND_MIGRATION_COMPLETE.md  CODE_QUALITY_CLEANUP_COMPLETE.md  CODE_QUALITY_IMPROVEMENTS.md  CODE_QUALITY_REMAINING_WORK_GUIDE.md  CODE_QUALITY_REPORT.md  COMPLETE_GAME_AUDIT_REPORT.md  COMPLETE_LAUNCH_GUIDE.md  COMPLETE_METAHUMAN_SYSTEM.md  COMPLETION_REPORT.md  COMPREHENSIVE_FEATURE_LIST.md  COMPREHENSIVE_TEST_REPORT.md  CULTURAL_GAMES_TESTING.md  CYBERPUNK_THEME_CHOICES.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_HEALTH_CHECK_REPORT.md  DEPLOYMENT_READINESS_REPORT.md  DESIGN_OPTIONS_GUIDE.md  DESIGN_STRATEGY.md  DUAL_BOT_TESTING_GUIDE.md  ENHANCEMENT_COMPLETE.md  ENHANCEMENT_PROGRESS.md  FIREBASE_PUSH_NOTIFICATIONS_SETUP.md  FIREBASE_PUSH_SETUP_COMPLETE.md  GAME_DISPLAY_DESIGN_ENHANCEMENTS.md  GAME_ENGINE_IMPLEMENTATION.md  GAME_IMAGES_NEEDED.md  (+51 more)
.emergent/: emergent.yml
backend/: ENV_VARIABLES.md  README.md  VIBE654_TOURNAMENT_DOCS.md  lifespan.py  lifespan_indexes.py  lifespan_migrations.py  lifespan_workers.py  requirements.txt  server.py  websocket_server.py
data/: chair-holders.txt
memory/: CHANGELOG.md  (+4 more)
source/web-assets/onchain/viberidez_fare_splitter/programs/viberidez_fare_splitter/: Cargo.toml
(+2691 files in other folders)
